--- a/dashboard/templates/main/domain.html
+++ b/dashboard/templates/main/domain.html
@@ -273,7 +273,7 @@
                                 </svg>
                                 <span>View Details</span>
                             </a>
-                            {% if domain.status == 'Not running' %}
+                            {% if domain.status != 'Running' %}
                             <a href="{% url 'startstop_domain' domain=domain.domain_name action='start' %}" 
                                class="flex items-center space-x-2 px-4 py-2 text-sm text-green-600 hover:bg-green-50">
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
